external css style

--- a/html/Practice/practice_webpage_1/practice_webpage_1_en.html
+++ b/html/Practice/practice_webpage_1/practice_webpage_1_en.html
@@ -2,9 +2,10 @@
 <html lang="en-US">
           <head>
                     <title>Doge_pic</title>
+                    <link rel="stylesheet" href=".\practice_webpage_1.css">
           </head>
           <body>
-                    <h1 style="font-size : 60 px; background-color:rgb(44, 44, 44); color: white;">This is a web page for doge pics!!</h1>
+                    <h1>This is a web page for doge pics!!</h1>
                     <hr>
                     <img src="..\image_bin\doge_meme_pic.jpg" alt="doge pic" width="500" height="300">
                     <p title="language select">Language : English <a href=".\practice_webpage_1_ch.html">中文</a></p>
