--- a/html/Practice/practice_webpage_1/practice_webpage_1_ch.html
+++ b/html/Practice/practice_webpage_1/practice_webpage_1_ch.html
@@ -2,9 +2,10 @@
 <html lang="ch-TW">
           <head>
                     <title>Doge_pic</title>
+                    <link rel="stylesheet" href=".\practice_webpage_1.css">
           </head>
           <body>
-                    <h1 style="font-size : 35px; background-color:rgb(44, 44, 44); color: white;">這是一個充滿狗狗圖的網站!!</h1>
+                    <h1>這是一個充滿狗狗圖的網站!!</h1>
                     <hr>
                     <img src="..\image_bin\doge_meme_pic.jpg" alt="doge pic" width="500" height="300">
                     <p title="language select">語言 : 中文 <a href=".\practice_webpage_1_en.html">Engish</a></p>
