--- a/html/Practice/practice_webpage_1/practice_webpage_1_ch.html
+++ b/html/Practice/practice_webpage_1/practice_webpage_1_ch.html
@@ -8,6 +8,8 @@
                     <h1>這是一個充滿狗狗圖的網站!!</h1>
                     <hr>
                     <img src="..\image_bin\doge_meme_pic.jpg" alt="doge pic" width="500" height="300">
+                    <p>寄給我們更多的狗狗圖，讓收藏集增加</p>
+                    <address>寄到email : <a href="mailto: bencode2021@gmail.com">bencode2021@gmail.com</a></address>
                     <p title="language select">語言 : 中文 <a href=".\practice_webpage_1_en.html">Engish</a></p>
           </body>
 </html>
