--- a/html/Practice/practice_webpage_1/practice_webpage_1_en.html
+++ b/html/Practice/practice_webpage_1/practice_webpage_1_en.html
@@ -2,14 +2,14 @@
 <html lang="en-US">
           <head>
                     <title>Doge_pic</title>
-                    <link rel="stylesheet" href=".\practice_webpage_1.css">
+                    <link rel="stylesheet" href="./practice_webpage_1.css">
           </head>
           <body>
                     <h1>This is a web page for doge pics!!</h1>
                     <hr>
-                    <img src="..\image_bin\doge_meme_pic.jpg" alt="doge pic" width="500" height="300">
+                    <img src="../image_bin/doge_meme_pic.jpg" alt="doge pic" width="500" height="300">
                     <p>Send us more doge pics so we can add it to our collection!</p>
                     <address>send to email : <a href="mailto: bencode2021@gmail.com">bencode2021@gmail.com</a></address>
-                    <p title="language select">Language : English <a href=".\practice_webpage_1_ch.html">中文</a></p>
+                    <p title="language select">Language : English <a href="./practice_webpage_1_ch.html">中文</a></p>
           </body>
 </html>
