--- a/html/Practice/practice_webpage_1/practice_webpage_1_ch.html
+++ b/html/Practice/practice_webpage_1/practice_webpage_1_ch.html
@@ -3,6 +3,7 @@
           <head>
                     <title>Doge_pic</title>
                     <link rel="stylesheet" href="./practice_webpage_1.css">
+                    <link rel="icon" href="./image_bin/doge_meme_pic.jpg">
           </head>
           <body>
                     <h1>這是一個充滿狗狗圖的網站!!</h1>
