added navigation menu

--- a/html/Practice/practice_webpage_1/practice_webpage_1_ch.html
+++ b/html/Practice/practice_webpage_1/practice_webpage_1_ch.html
@@ -6,6 +6,9 @@
                     <link rel="icon" href="./image_bin/doge_meme_pic.jpg">
           </head>
           <body>
+                    <ul id="menu">
+                              <li><a>首頁</a></li><li><a>關於</a></li>
+                    </ul>
                     <h1>這是一個充滿狗狗圖的網站!!</h1>
                     <hr>
                     <img src="../image_bin/doge_meme_pic.jpg" alt="doge pic" width="500" height="300">
