--- a/html/Practice/practice_webpage_1/practice_webpage_1_en.html
+++ b/html/Practice/practice_webpage_1/practice_webpage_1_en.html
@@ -6,6 +6,9 @@
                     <link rel="icon" href="./image_bin/doge_meme_pic.jpg">
           </head>
           <body>
+                    <ul id="menu">
+                              <li><a>Home</a></li><li><a>about</a></li>
+                    </ul>
                     <h1>This is a web page for doge pics!!</h1>
                     <hr>
                     <img src="../image_bin/doge_meme_pic.jpg" alt="doge pic" width="500" height="300">
