--- a/html/Practice/practice_webpage_1/Practice_webpage_1_Home_ch.html
+++ b/html/Practice/practice_webpage_1/Practice_webpage_1_Home_ch.html
@@ -2,7 +2,7 @@
 <html lang="ch-TW">
           <head>
                     <title>Doge_pic</title>
-                    <link rel="stylesheet" href="./practice_webpage_1.css">
+                    <link rel="stylesheet" href="./Practice_webpage_1_Home.css">
                     <link rel="icon" href="./image_bin/doge_meme_pic.jpg">
           </head>
           <body>
@@ -14,6 +14,6 @@
                     <img src="../image_bin/doge_meme_pic.jpg" alt="doge pic" width="500" height="300">
                     <p>寄給我們更多的狗狗圖，讓收藏集增加</p>
                     <address>寄到email : <a href="mailto: bencode2021@gmail.com">bencode2021@gmail.com</a></address>
-                    <p title="language select">語言 : 中文 <a href="./practice_webpage_1_en.html">Engish</a></p>
+                    <p title="language select">語言 : 中文 <a href="./Practice_webpage_1_Home_en.html">Engish</a></p>
           </body>
 </html>
