Revert "Renamed files"
This reverts commit 859a7c9094ad4b31d114e9cfda7d737b0ce288c8.

--- a/html/Practice/practice_webpage_1/practice_webpage_1_en.html
+++ b/html/Practice/practice_webpage_1/practice_webpage_1_en.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
           <head>
                     <title>Doge_pic</title>
-                    <link rel="stylesheet" href="./Practice_webpage_1_Home.css">
+                    <link rel="stylesheet" href="./practice_webpage_1.css">
                     <link rel="icon" href="./image_bin/doge_meme_pic.jpg">
           </head>
           <body>
@@ -14,6 +14,6 @@
                     <img src="../image_bin/doge_meme_pic.jpg" alt="doge pic" width="500" height="300">
                     <p>Send us more doge pics so we can add it to our collection!</p>
                     <address>send to email : <a href="mailto: bencode2021@gmail.com">bencode2021@gmail.com</a></address>
-                    <p title="language select">Language : English <a href="./Practice_webpage_1_Home_ch.html">中文</a></p>
+                    <p title="language select">Language : English <a href="./practice_webpage_1_ch.html">中文</a></p>
           </body>
 </html>
