--- a/html/Practice/practice_webpage_1/Practice_webpage_1_Home_ch.html
+++ b/html/Practice/practice_webpage_1/Practice_webpage_1_Home_ch.html
@@ -6,14 +6,25 @@
                     <link rel="icon" href="./image_bin/doge_meme_pic.jpg">
           </head>
           <body>
-                    <ul id="menu">
-                              <li><a>首頁</a></li><li><a>關於</a></li>
-                    </ul>
                     <h1>這是一個充滿狗狗圖的網站!!</h1>
-                    <hr>
-                    <img src="../image_bin/doge_meme_pic.jpg" alt="doge pic" width="500" height="300">
+                    <ul id="menu">
+                              <li><a href="Practice_webpage_1_Home_ch.html">首頁</a></li><li><a>關於</a></li>
+                    </ul>
+                    <img id="2022-03-13_1"src="../image_bin/2022-03-13_1.jpg" alt="2022-03-13" onmouseover="img_hover(this)" onmouseout="img_unhover(this)">
                     <p>寄給我們更多的狗狗圖，讓收藏集增加</p>
                     <address>寄到email : <a href="mailto: bencode2021@gmail.com">bencode2021@gmail.com</a></address>
                     <p title="language select">語言 : 中文 <a href="./Practice_webpage_1_Home_en.html">Engish</a></p>
+                    <script>
+                              function img_hover(element){
+                                        var url = document.getElementById("2022-03-13_1").src;
+                                        var name = "../image_bin/"+url.substring(url.indexOf("20"),url.lastIndexOf(".jpg"))+"-T.jpg";
+                                        element.setAttribute("src",name);
+                              }
+                              function img_unhover(element){
+                                        var url = document.getElementById("2022-03-13_1").src;
+                                        var name = "../image_bin/"+url.substring(url.indexOf("20"),url.lastIndexOf(".jpg")-2)+".jpg";
+                                        element.setAttribute("src",name);
+                              }
+                    </script>
           </body>
 </html>
