--- a/html/Practice/practice_webpage_1/Practice_webpage_1_Home_en.html
+++ b/html/Practice/practice_webpage_1/Practice_webpage_1_Home_en.html
@@ -3,7 +3,7 @@
           <head>
                     <title>Doge_pic</title>
                     <link rel="stylesheet" href="./Practice_webpage_1_Home.css">
-                    <link rel="icon" href="./image_bin/website_1_icon.jpg">
+                    <link rel="icon" href="./image_bin/Practice_website_1_icon.ico">
           </head>
           <body>
                     <h1>This web page is filled with pictures of strips</h1>
