icon file path debug

--- a/html/Practice/practice_webpage_1/Practice_webpage_1_Home_ch.html
+++ b/html/Practice/practice_webpage_1/Practice_webpage_1_Home_ch.html
@@ -3,7 +3,7 @@
           <head>
                     <title>Doge_pic</title>
                     <link rel="stylesheet" href="./Practice_webpage_1_Home.css">
-                    <link rel="icon" href="./image_bin/Practice_website_1_icon.ico">
+                    <link rel="icon" href="../image_bin/Practice_website_1_icon.ico">
           </head>
           <body>
                     <h1>這個網站充滿STRIPS的照片</h1>
