--- a/Practice_webpage_1_Home_ch.html
+++ b/Practice_webpage_1_Home_ch.html
@@ -3,16 +3,16 @@
           <head>
                     <title>Stripes</title>
                     <link rel="stylesheet" href="./Practice_webpage_1_Home.css">
-                    <link rel="icon" href="../image_bin/Practice_website_1_icon.ico">
+                    <link rel="icon" href="./image_bin/Practice_website_1_icon.ico">
           </head>
           <body>
                     <h1 class="website_title">這個網站充滿STRIPS的照片</h1>
                     <ul id="menu">
                               <li><a href="Practice_webpage_1_Home_ch.html">首頁</a></li><li><a>關於</a></li>
                     </ul>
-                    <div class="img_bank" onmouseover="img_hover(this)" onmouseout="img_unhover(this)" ><div><strong>place_holder</strong></div><img id="2022-03-13_1"src="../image_bin/2022-03-13_1.jpg"></div>
-                    <div class="img_bank" onmouseover="img_hover(this)" onmouseout="img_unhover(this)" ><div><strong>place_holder</strong></div><img id="2022-03-14_1"src="../image_bin/2022-03-14_1.jpg"></div>
-                    <div class="img_bank" onmouseover="img_hover(this)" onmouseout="img_unhover(this)" ><div><strong>place_holder</strong></div><img id="2022-03-14_2"src="../image_bin/2022-03-14_2.jpg"></div>
+                    <div class="img_bank" onmouseover="img_hover(this)" onmouseout="img_unhover(this)" ><div><strong>place_holder</strong></div><img id="2022-03-13_1"src="./image_bin/2022-03-13_1.jpg"></div>
+                    <div class="img_bank" onmouseover="img_hover(this)" onmouseout="img_unhover(this)" ><div><strong>place_holder</strong></div><img id="2022-03-14_1"src="./image_bin/2022-03-14_1.jpg"></div>
+                    <div class="img_bank" onmouseover="img_hover(this)" onmouseout="img_unhover(this)" ><div><strong>place_holder</strong></div><img id="2022-03-14_2"src="./image_bin/2022-03-14_2.jpg"></div>
                     <div class="bottom_tab">
                               <address>郵件信箱: <a href="mailto: bencode2021@gmail.com">bencode2021@gmail.com</a></address>
                               <p title="language select" style="float: right;">語言 : 中文 <a href="./Practice_webpage_1_Home_en.html">English</a></p>
