--- a/Practice_webpage_1_Home_ch.html
+++ b/Practice_webpage_1_Home_ch.html
@@ -4,6 +4,7 @@
                     <title>Stripes</title>
                     <link rel="stylesheet" href="./Practice_webpage_1_Home.css">
                     <link rel="icon" href="./image_bin/Practice_website_1_icon.ico">
+                    <meta name="keywords" content="Stripes,Practice_webpage_1,BenCode2021">
           </head>
           <body>
                     <h1 class="website_title">這個網站充滿STRIPS的照片</h1>
