--- a/Practice_webpage_1_Home_en.html
+++ b/Practice_webpage_1_Home_en.html
@@ -4,6 +4,7 @@
                     <title>Stripes</title>
                     <link rel="stylesheet" href="./Practice_webpage_1_Home.css">
                     <link rel="icon" href="./image_bin/Practice_website_1_icon.ico">
+                    <meta name="keywords" content="Stripes,Practice_webpage_1,BenCode2021">
           </head>
           <body>
                     <h1 class="website_title">This web page is filled with pictures of stripes</h1>
