--- a/Practice_webpage_1_Home_en.html
+++ b/Practice_webpage_1_Home_en.html
@@ -5,7 +5,7 @@
                     <link rel="stylesheet" href="./Practice_webpage_1_Home.css">
                     <link rel="icon" href="./image_bin/Practice_website_1_icon.ico">
                     <meta name="keywords" content="Stripes,Practice_webpage_1,BenCode2021">
-                    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+                    <meta name="viewport" content="width=device-width, initial-scale=1.0">
           </head>
           <body>
                     <h1 class="website_title">This web page is filled with pictures of stripes</h1>
