--- a/Practice_webpage_1_Home_ch.html
+++ b/Practice_webpage_1_Home_ch.html
@@ -12,9 +12,11 @@
                     <ul id="menu">
                               <li><a href="Practice_webpage_1_Home_ch.html">首頁</a></li><li><a>關於</a></li>
                     </ul>
+                    <div style="margin: 20px 10%">
                     <div class="img_bank" onmouseover="img_hover(this)" onmouseout="img_unhover(this)" ><div><strong>place_holder</strong></div><img id="2022-03-13_1"src="./image_bin/2022-03-13_1.jpg"></div>
                     <div class="img_bank" onmouseover="img_hover(this)" onmouseout="img_unhover(this)" ><div><strong>place_holder</strong></div><img id="2022-03-14_1"src="./image_bin/2022-03-14_1.jpg"></div>
                     <div class="img_bank" onmouseover="img_hover(this)" onmouseout="img_unhover(this)" ><div><strong>place_holder</strong></div><img id="2022-03-14_2"src="./image_bin/2022-03-14_2.jpg"></div>
+                    </div>
                     <div class="bottom_tab">
                               <address>郵件信箱: <a href="mailto: bencode2021@gmail.com">bencode2021@gmail.com</a></address>
                               <p title="language select" style="float: right;">語言 : 中文 <a href="./Practice_webpage_1_Home_en.html">English</a></p>
